--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -351,39 +351,74 @@
             /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
             // background: #aff1d3;
             // width: 200px;
-            box-sizing: border-box;
-            // width: 480.27px;
+            // box-sizing: border-box;
+            // // width: 480.27px;
+            // position: relative;
+            // border-radius: 10px;
+            // font-family: 'Noto Sans';
+            // font-size: 15px;
+            // color: #000;
+            // text-decoration: none;
+            margin: 100px auto;
+            height: auto;
+            @include flex(center,space-around);
+            flex-wrap: wrap;
             position: relative;
-            border-radius: 10px;
-            font-family: 'Noto Sans';
-            font-size: 15px;
-            color: #000;
-            text-decoration: none;
-            @include desktop{
-              display: flex;
+            @include desktop {
+                height: 640px;
+                display: flex;
             }
             .features-flipper {
+                // position: relative;
+                // -webkit-transition: 1.9s;
+                // -webkit-transform-style: preserve-3d;
+                // -moz-transition: 1.9s;
+                // -moz-transform-style: preserve-3d;
+                // -o-transition: 1.9s;
+                // -o-transform-style: preserve-3d;
+                // transition: 1.9s;
+                // transform-style: preserve-3d;
+                // justify-content: space-around;
+                // flex-direction: row;
+                // &:hover {
+                //     -webkit-transform: rotateY(180deg);
+                //     -moz-transform: rotateY(180deg);
+                //     -o-transform: rotateY(180deg);
+                //     transform: rotateY(180deg);
+                // }
+                flex: 0 0 auto;
+                width: 400px;
+                height: 400px;
+                background-color: #AFF1D3;
+                margin-top: 20px;
+                @include flex(center,space-between);
+                flex-wrap: wrap;
                 position: relative;
-                -webkit-transition: 1.9s;
-                -webkit-transform-style: preserve-3d;
-                -moz-transition: 1.9s;
-                -moz-transform-style: preserve-3d;
-                -o-transition: 1.9s;
-                -o-transform-style: preserve-3d;
-                transition: 1.9s;
-                transform-style: preserve-3d;
-                justify-content: space-around;
-                flex-direction: row;
-                &:hover {
-                    -webkit-transform: rotateY(180deg);
-                    -moz-transform: rotateY(180deg);
-                    -o-transform: rotateY(180deg);
-                    transform: rotateY(180deg);
+                @include desktop {
+                    width: 300px;
+                    height: 300px;
                     cursor: pointer;
+                    background-color: #AFF1D3;
+                    // position: relative;
+                    -webkit-transition: 1.9s;
+                    -webkit-transform-style: preserve-3d;
+                    -moz-transition: 1.9s;
+                    -moz-transform-style: preserve-3d;
+                    -o-transition: 1.9s;
+                    -o-transform-style: preserve-3d;
+                    transition: 1.9s;
+                    transform-style: preserve-3d;
+                    justify-content: space-around;
+                    flex-direction: row;
+                    @include border-radius(10px);
+                    &:hover {
+                        @include visibility(hidden);
+                        @include rotate(180deg);
+                    }
                 }
+
                 .front {
                   background: #aff1d3;
-
                     height: auto;
                     text-align: center;
                     overflow: hidden;
@@ -397,6 +432,9 @@
                     -moz-backface-visibility: hidden;
                     -o-backface-visibility: hidden;
                     backface-visibility: hidden;
+                    @include desktop{
+                      width: 100%;
+                    }
                 }
                 .features-back {
                     // width: 480px;
@@ -419,8 +457,11 @@
                     -o-transform: rotateY(180deg);
                     transform: rotateY(180deg);
                     p{
-                      font-size: 25px;
-                    }
+                      font-size: 15px;
+                      text-align: start;
+                      line-height: 31px;
+                      padding: 10px;
+                  }
                 }
             }
         }
