--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1818,8 +1818,7 @@ body {
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-  max-width: 768px;
-  background-color: grey; }
+  max-width: 37.5rem; }
 
 .about-school {
   border-bottom: solid 3px #4FC8A1;
@@ -1830,13 +1829,7 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column; }
-  @media (min-width: 768px) {
-    .members-list {
-      -ms-flex-direction: column;
-          flex-direction: column; } }
+  display: flex; }
   .members-list .members-grid {
     display: -ms-flexbox;
     display: flex;
@@ -1844,13 +1837,9 @@ body {
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around; }
-    @media (min-width: 768px) {
-      .members-list .members-grid {
-        -ms-flex-direction: row;
-            flex-direction: row; } }
     .members-list .members-grid .members-block {
-      -ms-flex: 33%;
-          flex: 33%;
+      -ms-flex: 0.03;
+          flex: 0.03;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-align: center;
@@ -1859,7 +1848,6 @@ body {
           flex-direction: column; }
       @media (min-width: 768px) {
         .members-list .members-grid .members-block {
-          max-width: 990px;
           -ms-flex: 1;
               flex: 1; } }
     .members-list .members-grid .flip-container {
@@ -1898,17 +1886,12 @@ body {
         border-radius: 50%;
         position: absolute;
         width: 125px;
+        overflow: hidden;
         text-overflow: ellipsis;
         height: 125px;
         text-align: center;
         right: 3px;
         transform: rotateY(180deg); }
-        @media (min-width: 768px) {
-          .members-list .members-grid .flip-container .back {
-            width: 200px;
-            height: 200px;
-            right: 4px;
-            top: 55px; } }
     .members-list .members-grid .flip-container.hover .flipper,
     .members-list .members-grid .flip-container:hover .flipper {
       transform: rotateY(180deg); }
@@ -1917,24 +1900,13 @@ body {
     .members-list .members-grid .front {
       width: 125px;
       height: 125px; }
-      @media screen and (min-width: 650px) {
-        .members-list .members-grid .back,
-        .members-list .members-grid .flip-container,
-        .members-list .members-grid .front {
-          width: 190px;
-          height: 190px; } }
-      @media (min-width: 768px) {
-        .members-list .members-grid .back,
-        .members-list .members-grid .flip-container,
-        .members-list .members-grid .front {
-          width: 200px;
-          height: 200px; } }
     .members-list .members-grid .back,
     .members-list .members-grid .front {
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden; }
     .members-list .members-grid .members_det {
-      text-align: center; }
+      text-align: center;
+      font-size: 1.375rem; }
 
 .members_at_large {
   padding-bottom: 3.4375rem;
@@ -1952,17 +1924,11 @@ body {
         flex-wrap: wrap;
     -ms-flex-pack: center;
         justify-content: center; }
-    @media (min-width: 768px) {
-      .members_at_large .members_at_large-grid {
-        -ms-flex-wrap: nowrap;
-            flex-wrap: nowrap; } }
     .members_at_large .members_at_large-grid .members_at_large-name {
       font-size: 1.375rem;
-      -ms-flex-pack: center;
-          justify-content: center;
       display: -ms-flexbox;
       display: flex;
-      padding: .2rem;
+      width: 26%;
       text-align: center;
       margin: 1rem; }
 
@@ -1978,6 +1944,13 @@ body {
   .meeting-minutes .red-more {
     -ms-flex-item-align: end;
         align-self: flex-end; }
+
+.target {
+  background-color: grey;
+  width: 100%;
+  height: 10%;
+  padding: 0.625rem;
+  display: none; }
 
 .newsLetter {
   display: -ms-flexbox;
@@ -2190,18 +2163,13 @@ hover {
   box-sizing: border-box; }
 
 .nw-program-wrapper {
-  max-width: 768px;
+  max-width: 37.5rem;
   height: auto;
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 0.9375rem;
   -ms-flex-align: center;
       align-items: center; }
-
-p {
-  font-size: 1.625rem;
-  line-height: 2.5rem;
-  font-style: "Noto Sans", sans-serif; }
 
 .spcil p {
   font-size: 1.25rem;
@@ -2221,10 +2189,6 @@ p {
   padding-bottom: 2.8125rem; }
   .nw-program .why-nw p {
     display: block; }
-    @media (min-width: 768px) {
-      .nw-program .why-nw p {
-        -moz-text-align-last: right;
-             text-align-last: right; } }
   .nw-program .nw-img {
     display: -ms-flexbox;
     display: flex;
@@ -2232,18 +2196,6 @@ p {
         justify-content: center;
     margin-top: 3.4375rem;
     margin-bottom: 1.875rem; }
-    @media (min-width: 768px) {
-      .nw-program .nw-img {
-        float: right;
-        width: 900rem;
-        height: 300px; } }
-
-@media (min-width: 768px) {
-  .nw-part1 {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: row;
-        flex-direction: row; } }
 
 .funding {
   display: -ms-flexbox;
@@ -2253,43 +2205,21 @@ p {
   margin-top: 1.875rem;
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem; }
+  .funding .funding-img {
+    margin-top: 25rem; }
+  .funding .funding-det {
+    display: block; }
   .funding .funding-img,
   .funding .money-spend-img {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center; }
-    @media (min-width: 768px) {
-      .funding .funding-img,
-      .funding .money-spend-img {
-        width: 50%;
-        margin-bottom: 4rem; } }
-  @media (min-width: 768px) {
-    .funding .nw-part2 {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-direction: row;
-          flex-direction: row; } }
-  @media (min-width: 768px) {
-    .funding .nw-part3 {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
-    .funding .money-spend-para {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex: 25%;
-          flex: 25%;
-      height: 50%;
-      -ms-flex-negative: 2;
-          flex-shrink: 2; }
-    .funding img {
-      height: 60%; } }
-  @media (min-width: 768px) {
-    .funding .red-border-container {
-      width: 60%;
-      height: 20rem; } }
+    .funding .funding-img img,
+    .funding .money-spend-img img {
+      width: 87%;
+      margin-right: 0.125rem;
+      margin-bottom: 0.625rem; }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
@@ -2348,9 +2278,7 @@ p {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center; }
+  display: flex; }
   .teacher-list .teacher-grid {
     display: -ms-flexbox;
     display: flex;
@@ -2359,8 +2287,8 @@ p {
     -ms-flex-pack: distribute;
         justify-content: space-around; }
     .teacher-list .teacher-grid .teacher-block {
-      -ms-flex: 33%;
-          flex: 33%;
+      -ms-flex: 0.03;
+          flex: 0.03;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-direction: column;
@@ -2406,10 +2334,10 @@ p {
       .teacher-list .teacher-grid .flip-container .back {
         border-radius: 50%;
         position: absolute;
-        width: 100px;
+        width: 125px;
         overflow: hidden;
         text-overflow: ellipsis;
-        height: 100px;
+        height: 125px;
         text-align: center;
         right: 3px;
         transform: rotateY(180deg); }
@@ -2419,8 +2347,8 @@ p {
     .teacher-list .teacher-grid .back,
     .teacher-list .teacher-grid .flip-container,
     .teacher-list .teacher-grid .front {
-      width: 100px;
-      height: 100px; }
+      width: 125px;
+      height: 125px; }
     .teacher-list .teacher-grid .back,
     .teacher-list .teacher-grid .front {
       -webkit-backface-visibility: hidden;
