--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -8,42 +8,49 @@
 
 .site-main{
   .involved-wrapper{
-    @media (max-width: 780px) {
-      .container {
-          width: 100%;
-          margin: 0 auto;
-          // padding: 0
-          // background-color: #4FC8A1;
-
-      }
-  }
-}
+      display:flex;
+      margin:0;
+    	height: auto;
+    	margin: 0 auto;
+    	padding-left: $basic_pading * 2;
+    	padding-right: $basic_pading * 1.5;
+    	align-items: center;
+    }
 }
 
-.involved-title {
-  // width: 200px;
-  // height: 120px;
+
+
+
+
+
+.involved-title
+      a{
+  width: 200px;
+  height: 120px;
   background-color: #4FC8A1;
   float: left;
   margin-left: 25px;
   margin-top: 100px;
   margin-bottom: 25px;
-
-
-  a {
-  width: 200px;
-  height: 120px;
+  color:#000;
+  text-align: center;
   font-family: Asap;
   font-size: 20px;
   line-height: 27px;
   color:#000;
-  margin-right: 25px;
-  background-color: #4FC8A1;
+  padding-top: 20px;
 
+
+}
+
+.moretag {
+  text-transform: uppercase;
 
   &:hover {
-    color: red;
+    background-color: red;
   }
+}
+
 
 
 
@@ -54,10 +61,7 @@
       background-color: #4FC8A1;
       border-radius: 6px;
       text-decoration: none;
-
-      //  width: 120px;
-      //  height: 220px;
-       font-size: 15px;
+      font-size: 15px;
        font-family: Asap;
        color:#fff;
        background-color: #4FC8A1 ;
@@ -93,6 +97,8 @@
 .text-shadow{
    border-top: 3px solid #248e6a;
    width: 100%;
+   padding-bottom: 10px;
+   margin-bottom: 20px;
 }
 .get_involved img {
   float: left;
@@ -102,11 +108,17 @@
 
 
 
+
 // This is for green line
 .text-shadow {
     border-top: 3px solid #248e6a;
     width: 100%;
     margin-bottom: 10px;
+
+
+    // @include border-radius (10px);
+    // border-right: 1px solid #248E6A;
+
 }
 // This is for support now container
 
@@ -131,6 +143,8 @@ justify-content: center;
     height: 100%;
 
 } @include desktop {
+
+
 }
 // This for green circle btn
 
@@ -260,7 +274,6 @@ blockquote {
          background-color: #F76072;
          border-radius: 6px;
          color: #fff;
-
         margin-left: 80px;
          font-family: "Noto Sans";
          font-size: 24px;
