--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1949,28 +1949,38 @@ body {
 * {
   box-sizing: border-box; }
 
-@media (max-width: 780px) {
-  .site-main .involved-wrapper .container {
-    width: 100%;
-    margin: 0 auto; } }
+.site-main .involved-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  height: auto;
+  margin: 0 auto;
+  padding-left: 1.25rem;
+  padding-right: 0.9375rem;
+  -ms-flex-align: center;
+      align-items: center; }
 
-.involved-title {
+.involved-title
+a {
+  width: 200px;
+  height: 120px;
   background-color: #4FC8A1;
   float: left;
   margin-left: 25px;
   margin-top: 100px;
-  margin-bottom: 25px; }
-  .involved-title a {
-    width: 200px;
-    height: 120px;
-    font-family: Asap;
-    font-size: 20px;
-    line-height: 27px;
-    color: #000;
-    margin-right: 25px;
-    background-color: #4FC8A1; }
-    .involved-title a:hover {
-      color: red; }
+  margin-bottom: 25px;
+  color: #000;
+  text-align: center;
+  font-family: Asap;
+  font-size: 20px;
+  line-height: 27px;
+  color: #000;
+  padding-top: 20px; }
+
+.moretag {
+  text-transform: uppercase; }
+  .moretag:hover {
+    background-color: red; }
 
 .gre-button {
   width: 261px;
@@ -2001,7 +2011,9 @@ body {
 
 .text-shadow {
   border-top: 3px solid #248e6a;
-  width: 100%; }
+  width: 100%;
+  padding-bottom: 10px;
+  margin-bottom: 20px; }
 
 .get_involved img {
   float: left;
