--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -17,36 +17,33 @@
 	align-items: center;
 }
 // fonts
-// h1,
-// h2,
-// h3 {
-// 	font-family: $font_title;
-// 	font-weight: normal;
-// }
-//
-// h1 {
-// 	font-size: 2.25rem;
-// 	line-height: 2.625rem;
-// }
-//
-// h2 {
-// 	font-size: 1.875rem;
-// 	line-height: 2.125rem;
-// }
-//
-// h3 {
-// 	font-size: 1.5rem;
-// 	line-height: 1.6875rem;
-// }
+h1,
+h2,
+h3 {
+	font-family: $font_title;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: $h1_size_mob;
+	line-height: 2.625rem;
+}
+
+h2 {
+	font-size:$h2_size_mob;
+	line-height: 2.125rem;
+}
+
+h3 {
+	font-size: $h3_size_mob;
+	line-height: 1.6875rem;
+}
 
 p {
-	font-size: 1.625rem;
+	font-size: $font_body_size_mob;
 	line-height: 2.5rem;
 	font-style: $font_body;
 }
-=======
-
->>>>>>> e5e177db6fd3e4d95e31e51f83792ab0f2df4f1e
 
 .spcil p {
 	font-size: 1.25rem;
@@ -73,7 +70,7 @@ p {
 			display: block;
 			@include desktop {
 				text-align-last: right;
-			};
+			}
 		}
 	}
 
@@ -219,24 +216,27 @@ p {
 	flex-wrap: wrap;
 	display: flex;
 	justify-content: center;
+	@include desktop {
+			flex-direction: column;
+	}
 
 	.teacher-grid {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
+		@include desktop {
+				flex-direction:row;
+		}
 
 		.teacher-block {
 			flex: 33%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			// @include tablet {
-			// 	flex: 0.03;
-			// }
 			@include desktop {
-				flex: 1;
+				max-width: 990px;
+					flex: 1;
 			}
->>>>>>> e5e177db6fd3e4d95e31e51f83792ab0f2df4f1e
 		}
 
 		.flip-container {
@@ -282,15 +282,21 @@ p {
 			.back {
 				border-radius: 50%;
 				position: absolute;
-				width: 100px;
+				width: 125px;
 				overflow: hidden;
 				text-overflow: ellipsis;
-				height: 100px;
+				height: 125px;
 				text-align: center;
 				right: 3px;
 				-webkit-transform: rotateY(180deg);
 				-moz-transform: rotateY(180deg);
 				transform: rotateY(180deg);
+				@include desktop{
+					width: 200px;
+					height: 200px;
+					right: 4px;
+					top:55px;
+				}
 			}
 		}
 
@@ -304,8 +310,16 @@ p {
 		.back,
 		.flip-container,
 		.front {
-			width: 100px;
-			height: 100px;
+			width: 125px;
+			height: 125px;
+			@media screen and (min-width: 650px){
+ 			width: 190px;
+ 			height: 190px;
+ 		}
+			@include desktop{
+				width: 200px;
+				height: 200px;
+			}
 		}
 
 		.back,
