--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -17,6 +17,51 @@
 	background-color: grey;
 }
 
+// fonts
+h1,
+h2,
+h3 {
+	font-family: $font_title;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: $h1_size_mob;
+	line-height: 2.625rem;
+}
+
+h2 {
+	font-size:$h2_size_mob;
+	line-height: 2.125rem;
+}
+
+h3 {
+	font-size: $h3_size_mob;
+	line-height: 1.6875rem;
+}
+
+p {
+	font-size: $font_body_size_mob;
+	line-height: 2.5rem;
+	font-style: $font_body;
+}
+
+.spcil p {
+	font-size: 1.25rem;
+	line-height: 2.5rem;
+	font-style: $font_main;
+}
+
+.green-btn {
+	background-color: #4FC8A1;
+	color: $white;
+	font-family: "Noto Sans";
+	border-radius: 6px;
+	font-size: 1.25rem;
+	font-weight: normal;
+	text-decoration: none;
+}
+
 // about NW School Sectio
 .about-school {
 	border-bottom: solid 3px $color_btn_green;
@@ -132,7 +177,7 @@
 	}
 	.members_det {
 		text-align: center;
-		// font-size: $font_member_staff;
+		font-size: $font_member_staff;
 	}
 }
 }
