--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -17,6 +17,7 @@
 	align-items: center;
 }
 // fonts
+
 h1,
 h2,
 h3 {
@@ -30,7 +31,7 @@ h1 {
 }
 
 h2 {
-	font-size:$h2_size_mob;
+	font-size: $h2_size_mob;
 	line-height: 2.125rem;
 }
 
@@ -67,10 +68,8 @@ p {
 
 	.why-nw {
 		p {
-			display: block;
-			@include desktop {
-				text-align-last: right;
-			}
+			display:block;
+			flex-shrink: 5;
 		}
 	}
 
@@ -80,10 +79,8 @@ p {
 		margin-top: $basic_margin*5.5;
 		margin-bottom: $basic_margin*3;
 		@include desktop {
-			float: right;
-			width: 900rem;
-			height: 300px;
-		};
+			width: 50%;
+		}
 	}
 }
 
@@ -94,52 +91,63 @@ p {
 	};
 }
 // Funding Section
+
 .funding {
 	display: flex;
 	flex-direction: column;
 	margin-top: $basic_margin*3;
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
+
 	.funding-img,
 	.money-spend-img {
 		display: flex;
 		justify-content: center;
-		@include desktop{
-			width: 50%;
-			margin-bottom: 4rem;
+		@include desktop {
+			display: flex;
+			margin-bottom: 12rem;
 		}
 	}
+
+	.funding-img img {
+		@include desktop {
+			flex-grow: 1;
+			width: 175%;
+			height: 175%;
+		}
+	}
+
+	.money-spend-img img {
+		@include desktop {
+			flex-grow: 1;
+			align-self: baseline;
+			width: 70%;
+			height: 68%;
+			padding-top:1.7rem;
+			padding-right:1.7rem;
+		};
+	}
+
 	.nw-part2 {
-	@include desktop {
+		@include desktop {
 			display: flex;
 			flex-direction: row;
 		}
-}
-	@include desktop{
-	.nw-part3{
-
-		display:flex;
-		flex-direction: row-reverse;
 	}
-		.money-spend-para{
+	@include desktop {
+		.nw-part3 {
 			display: flex;
-			flex:25%;
-			height: 50%;
-			flex-shrink: 2;
-
-
+			flex-direction: row-reverse;
+			height: 38rem;
 		}
-		img{
-			height:60%;
+		.money-spend-para {
+			flex-shrink: 5;
 		}
-
-}
-
+	}
 
 	.red-border-container {
 		@include desktop {
-			width: 60%;
-			height: 20rem;
+			height: 22rem;
 		}
 	}
 
@@ -169,7 +177,6 @@ p {
 			width: 80%;
 			height: 80%;
 		}
-
 		.address .phone {
 			font-weight: bolder;
 		}
@@ -217,7 +224,7 @@ p {
 	display: flex;
 	justify-content: center;
 	@include desktop {
-			flex-direction: column;
+		flex-direction: column;
 	}
 
 	.teacher-grid {
@@ -225,7 +232,7 @@ p {
 		flex-wrap: wrap;
 		justify-content: space-around;
 		@include desktop {
-				flex-direction:row;
+			flex-direction: row;
 		}
 
 		.teacher-block {
@@ -235,7 +242,7 @@ p {
 			align-items: center;
 			@include desktop {
 				max-width: 990px;
-					flex: 1;
+				flex: 1;
 			}
 		}
 
@@ -291,11 +298,11 @@ p {
 				-webkit-transform: rotateY(180deg);
 				-moz-transform: rotateY(180deg);
 				transform: rotateY(180deg);
-				@include desktop{
+				@include desktop {
 					width: 200px;
 					height: 200px;
 					right: 4px;
-					top:55px;
+					top: 55px;
 				}
 			}
 		}
@@ -312,11 +319,11 @@ p {
 		.front {
 			width: 125px;
 			height: 125px;
-			@media screen and (min-width: 650px){
- 			width: 190px;
- 			height: 190px;
- 		}
-			@include desktop{
+			@media screen and (min-width: 650px) {
+				width: 190px;
+				height: 190px;
+			}
+			@include desktop {
 				width: 200px;
 				height: 200px;
 			}
