--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1406,6 +1406,43 @@ div .secondary {
   max-width: 768px;
   background-color: grey; }
 
+h1,
+h2,
+h3 {
+  font-family: "Asap", sans-serif;
+  font-weight: normal; }
+
+h1 {
+  font-size: 2rem;
+  line-height: 2.625rem; }
+
+h2 {
+  font-size: 1.6rem;
+  line-height: 2.125rem; }
+
+h3 {
+  font-size: 1.4rem;
+  line-height: 1.6875rem; }
+
+p {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-style: "Noto Sans", sans-serif; }
+
+.spcil p {
+  font-size: 1.25rem;
+  line-height: 2.5rem;
+  font-style: "Noto Sans", sans-serif; }
+
+.green-btn {
+  background-color: #4FC8A1;
+  color: #fff;
+  font-family: "Noto Sans";
+  border-radius: 6px;
+  font-size: 1.25rem;
+  font-weight: normal;
+  text-decoration: none; }
+
 .about-school {
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 4.875rem; }
@@ -1519,7 +1556,8 @@ div .secondary {
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden; }
     .members-list .members-grid .members_det {
-      text-align: center; }
+      text-align: center;
+      font-size: 1.375rem; }
 
 .members_at_large {
   padding-bottom: 3.4375rem;
@@ -1823,11 +1861,9 @@ p {
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem; }
   .nw-program .why-nw p {
-    display: block; }
-    @media (min-width: 768px) {
-      .nw-program .why-nw p {
-        -moz-text-align-last: right;
-             text-align-last: right; } }
+    display: block;
+    -ms-flex-negative: 5;
+        flex-shrink: 5; }
   .nw-program .nw-img {
     display: -ms-flexbox;
     display: flex;
@@ -1837,9 +1873,7 @@ p {
     margin-bottom: 1.875rem; }
     @media (min-width: 768px) {
       .nw-program .nw-img {
-        float: right;
-        width: 900rem;
-        height: 300px; } }
+        width: 50%; } }
 
 @media (min-width: 768px) {
   .nw-part1 {
@@ -1865,8 +1899,25 @@ p {
     @media (min-width: 768px) {
       .funding .funding-img,
       .funding .money-spend-img {
-        width: 50%;
-        margin-bottom: 4rem; } }
+        display: -ms-flexbox;
+        display: flex;
+        margin-bottom: 12rem; } }
+  @media (min-width: 768px) {
+    .funding .funding-img img {
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+      width: 175%;
+      height: 175%; } }
+  @media (min-width: 768px) {
+    .funding .money-spend-img img {
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+      -ms-flex-item-align: baseline;
+          align-self: baseline;
+      width: 70%;
+      height: 68%;
+      padding-top: 1.7rem;
+      padding-right: 1.7rem; } }
   @media (min-width: 768px) {
     .funding .nw-part2 {
       display: -ms-flexbox;
@@ -1878,21 +1929,14 @@ p {
       display: -ms-flexbox;
       display: flex;
       -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
+          flex-direction: row-reverse;
+      height: 38rem; }
     .funding .money-spend-para {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex: 25%;
-          flex: 25%;
-      height: 50%;
-      -ms-flex-negative: 2;
-          flex-shrink: 2; }
-    .funding img {
-      height: 60%; } }
+      -ms-flex-negative: 5;
+          flex-shrink: 5; } }
   @media (min-width: 768px) {
     .funding .red-border-container {
-      width: 60%;
-      height: 20rem; } }
+      height: 22rem; } }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
