--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1809,11 +1809,7 @@ hover {
 /*--------------------------------------------------------------
 # NW Program Page
 --------------------------------------------------------------*/
-* {
-  box-sizing: border-box; }
-
 .nw-program-wrapper {
-  max-width: 768px;
   height: auto;
   margin: 0 auto;
   padding-left: 1.25rem;
@@ -1895,58 +1891,57 @@ p {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
-        justify-content: center; }
-    @media (min-width: 768px) {
-      .funding .funding-img,
-      .funding .money-spend-img {
-        display: -ms-flexbox;
-        display: flex;
-        margin-bottom: 12rem; } }
+        justify-content: center;
+    margin-top: 2rem; }
   @media (min-width: 768px) {
     .funding .funding-img img {
       -ms-flex-positive: 1;
           flex-grow: 1;
-      width: 175%;
-      height: 175%; } }
+      width: 120%; } }
   @media (min-width: 768px) {
     .funding .money-spend-img img {
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-      -ms-flex-item-align: baseline;
-          align-self: baseline;
-      width: 70%;
-      height: 68%;
-      padding-top: 1.7rem;
       padding-right: 1.7rem; } }
   @media (min-width: 768px) {
     .funding .nw-part2 {
       display: -ms-flexbox;
       display: flex;
       -ms-flex-direction: row;
-          flex-direction: row; } }
+          flex-direction: row;
+      -ms-flex-align: center;
+          align-items: center; }
+      .funding .nw-part2 .red-border-container {
+        width: 82%;
+        display: -ms-flexbox;
+        display: flex; } }
   @media (min-width: 768px) {
     .funding .nw-part3 {
       display: -ms-flexbox;
       display: flex;
+      -ms-flex-align: center;
+          align-items: center;
       -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-      height: 38rem; }
+          flex-direction: row-reverse; }
     .funding .money-spend-para {
       -ms-flex-negative: 5;
           flex-shrink: 5; } }
-  @media (min-width: 768px) {
-    .funding .red-border-container {
-      height: 22rem; } }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center;
     margin-top: 1.875rem; }
+    @media (min-width: 768px) {
+      .funding .funding-btn {
+        -ms-flex-pack: end;
+            justify-content: flex-end; } }
     .funding .funding-btn .green-btn {
       padding: 10px;
       width: 44.666%;
       margin-right: 2px; }
+      @media (min-width: 768px) {
+        .funding .funding-btn .green-btn {
+          padding: 1.2rem;
+          width: 18%; } }
 
 .school-list {
   display: -ms-flexbox;
