--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -51,9 +51,6 @@ TABLE OF CONTENTS:
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import url("https://fonts.googleapis.com/css?family=Asap");
-@import url("https://fonts.googleapis.com/css?family=PT");
-@import url("https://fonts.googleapis.com/css?family=Noto");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -556,6 +553,23 @@ object {
     .home .site-content {
       padding-top: 140px; } }
 
+.the-page-title {
+  background-color: #fff;
+  height: 40px; }
+  .the-page-title ul {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    position: relative; }
+    .the-page-title ul li {
+      display: inline-block; }
+  @media (min-width: 768px) {
+    .the-page-title {
+      display: none; } }
+
 .main-navigation-container {
   display: -ms-flexbox;
   display: flex; }
@@ -582,7 +596,7 @@ div .menu-primary-menu-container {
 .main-navigation-container {
   width: 100%;
   background-color: #fff;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Serif", serif;
   display: flex;
   display: -ms-flexbox;
   -ms-flex-align: center;
@@ -727,7 +741,7 @@ div .secondary li a {
 
 div .secondary {
   position: relative;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Serif", serif;
   text-align: center;
   padding-right: 5px;
   background-color: #248E6A; }
@@ -764,7 +778,7 @@ div .secondary {
 /* Background*/
 .site-footer {
   margin: 0 auto;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Serif", serif;
   height: 150px;
   background-color: #125A50;
   color: #fff; }
@@ -1610,7 +1624,6 @@ body {
   width: 90%; }
 
 .materials {
-  margin-top: 50px;
   width: 100%;
   display: -ms-flexbox;
   display: flex;
@@ -1635,7 +1648,7 @@ body {
     height: 330px; }
     @media (min-width: 768px) {
       .materials img {
-        margin-top: 100px; } }
+        margin-top: 50px; } }
 
 .materials-contents {
   width: 90%; }
@@ -1818,7 +1831,8 @@ body {
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-  max-width: 37.5rem; }
+  max-width: 768px;
+  background-color: grey; }
 
 .about-school {
   border-bottom: solid 3px #4FC8A1;
@@ -1829,7 +1843,13 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column; }
+  @media (min-width: 768px) {
+    .members-list {
+      -ms-flex-direction: column;
+          flex-direction: column; } }
   .members-list .members-grid {
     display: -ms-flexbox;
     display: flex;
@@ -1837,9 +1857,13 @@ body {
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around; }
+    @media (min-width: 768px) {
+      .members-list .members-grid {
+        -ms-flex-direction: row;
+            flex-direction: row; } }
     .members-list .members-grid .members-block {
-      -ms-flex: 0.03;
-          flex: 0.03;
+      -ms-flex: 33%;
+          flex: 33%;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-align: center;
@@ -1848,6 +1872,7 @@ body {
           flex-direction: column; }
       @media (min-width: 768px) {
         .members-list .members-grid .members-block {
+          max-width: 990px;
           -ms-flex: 1;
               flex: 1; } }
     .members-list .members-grid .flip-container {
@@ -1886,12 +1911,17 @@ body {
         border-radius: 50%;
         position: absolute;
         width: 125px;
-        overflow: hidden;
         text-overflow: ellipsis;
         height: 125px;
         text-align: center;
         right: 3px;
         transform: rotateY(180deg); }
+        @media (min-width: 768px) {
+          .members-list .members-grid .flip-container .back {
+            width: 200px;
+            height: 200px;
+            right: 4px;
+            top: 55px; } }
     .members-list .members-grid .flip-container.hover .flipper,
     .members-list .members-grid .flip-container:hover .flipper {
       transform: rotateY(180deg); }
@@ -1900,13 +1930,24 @@ body {
     .members-list .members-grid .front {
       width: 125px;
       height: 125px; }
+      @media screen and (min-width: 650px) {
+        .members-list .members-grid .back,
+        .members-list .members-grid .flip-container,
+        .members-list .members-grid .front {
+          width: 190px;
+          height: 190px; } }
+      @media (min-width: 768px) {
+        .members-list .members-grid .back,
+        .members-list .members-grid .flip-container,
+        .members-list .members-grid .front {
+          width: 200px;
+          height: 200px; } }
     .members-list .members-grid .back,
     .members-list .members-grid .front {
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden; }
     .members-list .members-grid .members_det {
-      text-align: center;
-      font-size: 1.375rem; }
+      text-align: center; }
 
 .members_at_large {
   padding-bottom: 3.4375rem;
@@ -1924,11 +1965,17 @@ body {
         flex-wrap: wrap;
     -ms-flex-pack: center;
         justify-content: center; }
+    @media (min-width: 768px) {
+      .members_at_large .members_at_large-grid {
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap; } }
     .members_at_large .members_at_large-grid .members_at_large-name {
       font-size: 1.375rem;
+      -ms-flex-pack: center;
+          justify-content: center;
       display: -ms-flexbox;
       display: flex;
-      width: 26%;
+      padding: .2rem;
       text-align: center;
       margin: 1rem; }
 
@@ -1944,13 +1991,6 @@ body {
   .meeting-minutes .red-more {
     -ms-flex-item-align: end;
         align-self: flex-end; }
-
-.target {
-  background-color: grey;
-  width: 100%;
-  height: 10%;
-  padding: 0.625rem;
-  display: none; }
 
 .newsLetter {
   display: -ms-flexbox;
@@ -2163,13 +2203,18 @@ hover {
   box-sizing: border-box; }
 
 .nw-program-wrapper {
-  max-width: 37.5rem;
+  max-width: 768px;
   height: auto;
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 0.9375rem;
   -ms-flex-align: center;
       align-items: center; }
+
+p {
+  font-size: 1.625rem;
+  line-height: 2.5rem;
+  font-style: "Noto Sans", sans-serif; }
 
 .spcil p {
   font-size: 1.25rem;
@@ -2189,6 +2234,10 @@ hover {
   padding-bottom: 2.8125rem; }
   .nw-program .why-nw p {
     display: block; }
+    @media (min-width: 768px) {
+      .nw-program .why-nw p {
+        -moz-text-align-last: right;
+             text-align-last: right; } }
   .nw-program .nw-img {
     display: -ms-flexbox;
     display: flex;
@@ -2196,6 +2245,18 @@ hover {
         justify-content: center;
     margin-top: 3.4375rem;
     margin-bottom: 1.875rem; }
+    @media (min-width: 768px) {
+      .nw-program .nw-img {
+        float: right;
+        width: 900rem;
+        height: 300px; } }
+
+@media (min-width: 768px) {
+  .nw-part1 {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row; } }
 
 .funding {
   display: -ms-flexbox;
@@ -2205,21 +2266,43 @@ hover {
   margin-top: 1.875rem;
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem; }
-  .funding .funding-img {
-    margin-top: 25rem; }
-  .funding .funding-det {
-    display: block; }
   .funding .funding-img,
   .funding .money-spend-img {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center; }
-    .funding .funding-img img,
-    .funding .money-spend-img img {
-      width: 87%;
-      margin-right: 0.125rem;
-      margin-bottom: 0.625rem; }
+    @media (min-width: 768px) {
+      .funding .funding-img,
+      .funding .money-spend-img {
+        width: 50%;
+        margin-bottom: 4rem; } }
+  @media (min-width: 768px) {
+    .funding .nw-part2 {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row;
+          flex-direction: row; } }
+  @media (min-width: 768px) {
+    .funding .nw-part3 {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse; }
+    .funding .money-spend-para {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex: 25%;
+          flex: 25%;
+      height: 50%;
+      -ms-flex-negative: 2;
+          flex-shrink: 2; }
+    .funding img {
+      height: 60%; } }
+  @media (min-width: 768px) {
+    .funding .red-border-container {
+      width: 60%;
+      height: 20rem; } }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
@@ -2278,7 +2361,9 @@ hover {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
   .teacher-list .teacher-grid {
     display: -ms-flexbox;
     display: flex;
@@ -2287,8 +2372,8 @@ hover {
     -ms-flex-pack: distribute;
         justify-content: space-around; }
     .teacher-list .teacher-grid .teacher-block {
-      -ms-flex: 0.03;
-          flex: 0.03;
+      -ms-flex: 33%;
+          flex: 33%;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-direction: column;
@@ -2334,10 +2419,10 @@ hover {
       .teacher-list .teacher-grid .flip-container .back {
         border-radius: 50%;
         position: absolute;
-        width: 125px;
+        width: 100px;
         overflow: hidden;
         text-overflow: ellipsis;
-        height: 125px;
+        height: 100px;
         text-align: center;
         right: 3px;
         transform: rotateY(180deg); }
@@ -2347,8 +2432,8 @@ hover {
     .teacher-list .teacher-grid .back,
     .teacher-list .teacher-grid .flip-container,
     .teacher-list .teacher-grid .front {
-      width: 125px;
-      height: 125px; }
+      width: 100px;
+      height: 100px; }
     .teacher-list .teacher-grid .back,
     .teacher-list .teacher-grid .front {
       -webkit-backface-visibility: hidden;
@@ -2373,10 +2458,8 @@ hover {
   border-bottom: solid 3px #4FC8A1;
   max-width: 85%;
   margin: 0 auto;
-  overflow: hidden;
   height: 100%;
   padding: 30px 0;
-  overflow: auto;
   height: 100%;
   padding: 30px 0; }
 
