--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1893,6 +1893,10 @@ p {
     -ms-flex-pack: center;
         justify-content: center;
     margin-top: 2rem; }
+    @media (min-width: 768px) {
+      .funding .funding-img,
+      .funding .money-spend-img {
+        margin-top: 0px; } }
   @media (min-width: 768px) {
     .funding .funding-img img {
       -ms-flex-positive: 1;
@@ -1969,6 +1973,12 @@ p {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column; }
+  @media (min-width: 768px) {
+    .enroll .enrollment-wrap {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row;
+          flex-direction: row; } }
   .enroll .enroll-info {
     margin-top: 27rem; }
   .enroll .enroll-block {
@@ -1977,7 +1987,9 @@ p {
     display: flex;
     margin: 40px auto;
     -ms-flex-direction: column;
-        flex-direction: column; }
+        flex-direction: column;
+    -ms-flex-pack: center;
+        justify-content: center; }
     .enroll .enroll-block .enroll-img {
       margin-bottom: 50px; }
     .enroll .enroll-block .enroll-btn {
