--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -1,3 +1,4 @@
+
 /*--------------------------------------------------------------
 # About Page
 --------------------------------------------------------------*/
@@ -12,7 +13,8 @@
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
-	max-width: $mobile_width;
+	max-width: $desktop_width;
+	background-color: grey;
 }
 
 // about NW School Sectio
@@ -25,21 +27,27 @@
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
+	flex-direction: column;
+	@include desktop {
+			flex-direction: column;
+	};
 	.members-grid {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
+		@include desktop {
+				flex-direction:row;
+		};
+
 		.members-block {
-			flex: 0.03;
+			flex: 33%;
 			display: flex;
 		  align-items: center;
 			flex-direction: column;
-			@include tablet {
-				flex: 0.03;
-			}
 			@include desktop {
-				flex: 1;
-			}
+				max-width: 990px;
+					flex: 1;
+			};
 		}
 	.flip-container {
 		display: block;
@@ -81,7 +89,6 @@
 			border-radius: 50%;
 			position: absolute;
 			width: 125px;
-			overflow: hidden;
 			text-overflow: ellipsis;
 			height: 125px;
 			text-align: center;
@@ -89,6 +96,12 @@
 			-webkit-transform: rotateY(180deg);
 			-moz-transform: rotateY(180deg);
 			transform: rotateY(180deg);
+			@include desktop{
+				width: 200px;
+				height: 200px;
+				right: 4px;
+				top:55px;
+			} ;
 		}
 	}
 	.flip-container.hover .flipper,
@@ -102,8 +115,15 @@
 	.front {
 		width: 125px;
 		height: 125px;
+		 @media screen and (min-width: 650px){
+			width: 190px;
+			height: 190px;
+		};
+		@include desktop{
+			width: 200px;
+			height: 200px;
+		} ;
 	}
-
 	.back,
 	.front {
 		-webkit-backface-visibility: hidden;
@@ -112,7 +132,7 @@
 	}
 	.members_det {
 		text-align: center;
-		font-size: $font_member_staff;
+		// font-size: $font_member_staff;
 	}
 }
 }
@@ -128,10 +148,14 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		@include desktop{
+			flex-wrap: nowrap;
+		};
 		.members_at_large-name {
 			font-size: $font_member_staff;
+			justify-content: center;
 			display: flex;
-			width: 26%;
+		  padding: .2rem;
 			text-align: center;
 			margin: 1rem;
 		}
@@ -149,13 +173,6 @@
 	.red-more {
 		align-self: flex-end;
 	}
-}
-.target {
-	background-color: grey;
-	width: 100%;
-	height: 10%;
-	padding: $basic_pading;
-	display: none;
 }
 // newsLetter Section
 
