--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -1,182 +1,233 @@
 ///**** The Header ***/////
+.masthead{
+	position: absolute;
+}
 .site-content {
-    padding-top: 110px;
-    top: 0;
+	padding-top: 160px;
+	top: 0;
+}
+.home .site-content{
+	padding-top: 0px;@include desktop{
+		padding-top: 140px;
+	};
 }
 /////****Start Main Menu**** ////
+
 .main-navigation-container {
-    display: flex;
+	display: flex;
+}
+
+.main-navigation {
+	padding-top: 40px;
+	margin-right: 38px;
+}
+
+div .menu-primary-menu-container {
+	width: 100%;
 }
 .main-navigation {
-    padding-top: 40px;
-    margin-right: 38px;
+	min-width: 70%;
 }
-div .menu-primary-menu-container {
-    width: 100%;
-}
-.main-navigation-container {
-    display: flex;
-}
-.main-navigation {
-    min-width: 70%;
-}
-div .menu-primary-menu-container {
-    width: 100%;
-}
+
 .menu-primary-menu-container {
-    display: none;
-    ul {
-        li {
-            display: inline-block;
-            a:hover {
-                border-top: 6px solid #57B79F;
-                color: #57B79F;
-                cursor: pointer;
-            }
-        }
-    }
+	display: none;
+
+	ul {
+		li {
+			display: inline-block;
+
+			a:hover {
+				border-top: 6px solid #57B79F;
+				color: #57B79F;
+				cursor: pointer;
+			}
+		}
+	}
 }
+
 .main-navigation-container {
-    width: 100%;
-    background-color: $white;
-    font-family: $font_header_footer;
-    @include flex(center,space-between);
-    height: 5rem;
-    @include tablet {
-        display: inline-block;
-        height: 8rem;
-        padding: 0 15px;
-    }
+	width: 100%;
+	background-color: $white;
+	font-family: $font_header_footer;
+	@include flex(center,space-between);
+	height: 5rem;
+
+		display: inline-block;//
+		height: 8rem;//
+		padding: 0 15px;//
+
 }
+
 .menu-primary-menu-container {
-    @include desktop {
-        display: inline-block;
-        ul {
-            li {
-                display: inline;
-                a {
-                    text-transform: uppercase;
+	@include desktop {
+
+    white-space:nowrap;
+		display: inline-block;
+
+		ul {
+			li {
+				display: inline;
+
+				a {
+					text-transform: uppercase;
     text-decoration: none;
     color: #000;
     color: #231f20;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     border-top: 6px solid transparent;
     list-style: none;
-    padding: 15px 0;
-    margin: 0 5px;
-                }
-            }
-        }
-    }
+    padding: 15px 5px;
+
+				}
+			}
+		}
+	}
 }
 ///////The Hamburger Menu Section//////
+
 .responsive-menu-button {
-    margin-top: 0.1rem !important;
+	margin-top: 0.1rem !important;
 }
+
 .responsive-menu-box {
-    width: 34px!important;
-    height: 22px!important;
+	width: 34px!important;
+	height: 22px!important;
 }
+
 .responsive-menu-inner,
 .responsive-menu-inner::after,
 .responsive-menu-inner::before {
-    background-color: #D8D8D8!important;
-    width: 34px!important;
-    height: 4px!important;
-    border-radius: 0px!important;
+	background-color: #D8D8D8!important;
+	width: 34px!important;
+	height: 4px!important;
 }
+
 button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-    box-shadow: none !important;
+input[type="button"] {
+	box-shadow: none !important;
 }
+
 button#responsive-menu-button {
-    top: 6px!important;
-    right: 8%!important;
-    background-color: transparent!important;
+	top: 6px!important;
+	right: 8%!important;
+	background-color: transparent!important;
 }
+
 #primary-menu li.current-menu-item {
-    a {
-        border-top: 6px solid #57B79F;
-        color: #57B79F;
-        cursor: pointer;
-    }
+	a {
+		border-top: 6px solid #57B79F;
+		color: #57B79F;
+		cursor: pointer;
+	}
 }
 /////**** The Brand Logo Section ***/////
+
 .montessori-logo {
-    padding: 0;
-    margin: 10px 0 20px 30px;
-    width: 14rem;
-    height: 7rem;
-    @include desktop {
-        margin: 0;
-        padding: 30px 0 30px 10px;
-        width: 20rem;
-        min-width: 16rem;
-        height: 8rem;
-    }
-    img {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        padding-top: 25px;
-        @include desktop {
-            padding-top: 0;
-        }
-        a {
-            bottom: -20px;
-            cursor: pointer;
-            position: absolute;
-            color: transparent;
-        }
-    }
+	padding: 0;
+	margin: 10px 0 20px 30px;
+	width: 14rem;
+	height: 7rem;
+	@include desktop {
+		margin: 0;
+		padding: 30px 0 30px 10px;
+		width: 20rem;
+		min-width: 16rem;
+		height: 8rem;
+	}
+
+	img {
+		position: relative;
+		height: 100%;
+		width: 100%;
+		padding-top: 25px;
+		@include desktop {
+			height: 100px;
+			width: 300px;
+			padding-top: 0px;
+			margin-top: 0px;
+
+		}
+		a {
+			bottom: -20px;
+			cursor: pointer;
+			position: absolute;
+			color: transparent;
+		}
+	}
+}
+
+.main-menu-wrapper{
+
+	@include desktop{
+
+	};
 }
 .main-menu-wrapper {
-    width: 100%;
-    height: 65px;
-    @include flex(center,space-between);
-    @include desktop {
-        height: 90px;
-        white-space: nowrap;
-        overflow: hidden;
-    }
+	border-bottom: 2px solid #E2E2E2;
+	width: 100%;
+	height: 80px;
+	@include flex(center,space-between);
+	@include desktop {
+		border-bottom:none;
+		height: 90px;
+	}
 }
+
 .site-header {
-    z-index: 999;
-    min-width: $mobile-width;
-    width: 100%;
-    background: $white;
-    position: fixed;
-    top: 0;
+	z-index: 999;
+	min-width:380px;
+	width: 100%;
+	background: $white;
+	position: absolute;@include desktop{
+		position: fixed;
+	};
+	top: 0;
 }
+
 .home .site-header {
-    position: absolute;
+	padding-top:0;
+
+	position: absolute;
 }
 ////**Sub Menu Section**/////
+
 .back-to-top{
-    position: absolute;
-    left: 0;
+	position: absolute;
+	left: 0;
+margin-right: 30px;
 }
+
+
 div {
-    .secondary li a {
-        padding: 0 10px;
-    }
+	position: relative;
+
+	.secondary li:nth-child(3) a {
+		border-left: solid 1px white;
+		border-right: solid 1px white;
+	}
 }
+
 div {
-    position: relative;
-    .secondary li:nth-child(3) a {
-        border-left: solid 1px white;
-        border-right: solid 1px white;
-    }
+	position: relative;
+
+	.secondary li:nth-child(4) a {
+		padding: 0 20px;
+		border-left: solid 1px white;
+		border-right: solid 1px white;
+	}
 }
+.secondary li:nth-child(2) {
+	margin-left: 70px;
+}
+
 div {
-    position: relative;
-    .secondary li:nth-child(4) a {
-        padding: 0 20px;
-        border-left: solid 1px white;
-        border-right: solid 1px white;
-    }
+	.secondary li a {
+		padding: 0 5px;
+		line-height: 2.3rem;
+		@include desktop{
+			line-height: 2.3rem
+		};
+	}
 }
 div .secondary {
     position: relative;
@@ -217,4 +268,47 @@ div .secondary {
             color: white;
           }
     }
+	position: relative;
+
+
+
+	font-family: $font_header_footer;
+	@include desktop {
+		text-align: right;
+		padding:8px 10px;
+		height: 70px;
+		margin-top: 40px;
+	}
+	text-align: center;
+	padding-right:5px;
+
+	background-color: #248E6A;
+
+	& .active {
+		background-color: $color_btn_green;
+	}
+	ul{
+
+		min-width:50%;
+	}
+
+	li {
+		display: inline-block;
+		padding: 7px 10px;
+		@include desktop {
+			padding: 7px 15px;
+		};
+
+		a {
+			padding: 0 8px;
+			margin-right: 0;
+			font-weight: lighter;
+			font-size: 1.2rem;
+			@include desktop {
+				font-size: 1.4rem;
+			}
+			text-decoration: none;
+			color: white;
+		}
+	}
 }
