--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -1,160 +1,107 @@
-/*--------------------------------------------------------------
-#  get involved Page
---------------------------------------------------------------*/
-// General Setting
-* {
-  box-sizing: border-box;
+.site-main {
+    width:100%;
+    display: flex;
+    margin: 0 auto;
+    height: auto;
+
+.main-involved-wrapper {
+  padding-top: 50px;
 }
 
-.site-main{
-  .involved-wrapper{
-      display:flex;
-      margin:0;
-    	height: auto;
-    	margin: 0 auto;
-    	padding-left: $basic_pading * 2;
-    	padding-right: $basic_pading * 1.5;
-    	align-items: center;
+
+
+  }
+
+          .involved-title{
+              a {
+          width: 200px;
+          height: 120px;
+          margin-top: 50px;
+          background-color: #4FC8A1;
+          margin-left: 25px;
+          margin-bottom: 25px;
+          font-family: Asap;
+          font-size: 24px;
+          line-height: 27px;
+          color: #000;
+          text-align: center;
+          display:flex;
+          flex-flow:  row wrap;
+          justify-content:space-around;
+
+        }
+            a:hover {
+        color: #248e6a;
+
+      }
+}
+
+.gre-button {
+
+    width: 261px;
+    height: 47px;
+    background-color: #4FC8A1;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: Asap;
+    color: #fff;
+    background-color: #4FC8A1;
+    font-family: "Noto Sans";
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 30px;
+    display: block;
+      a {
+        width: 216px;
+        height: 30px;
+        font-family: "Noto Sans";
+        padding-top: 10px;
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
+        line-height: 30px;
+        color: #FFF;
+    }
+    .text-shadow {
+        border-top: 10px solid #248e6a;
+        width: 100%;
+        margin-bottom: 10px;
+        // @include border-radius (10px);
+        // border-right: 1px solid #248E6A;
     }
 }
-
-
-
-
-
-
-.involved-title
-      a{
-  width: 200px;
-  height: 120px;
-  background-color: #4FC8A1;
-  float: left;
-  margin-left: 25px;
-  margin-top: 100px;
-  margin-bottom: 25px;
-  color:#000;
-  text-align: center;
-  font-family: Asap;
-  font-size: 20px;
-  line-height: 27px;
-  color:#000;
-  padding-top: 20px;
-
-
-}
-
-.moretag {
-  text-transform: uppercase;
-
-  &:hover {
-    background-color: red;
-  }
-}
-
-
-
-
-
-  .gre-button {
-      width: 261px;
-      height: 47px;
-      background-color: #4FC8A1;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 15px;
-       font-family: Asap;
-       color:#fff;
-       background-color: #4FC8A1 ;
-       font-family: "Noto Sans";
-       font-size: 15px;
-       font-weight: bold;
-       text-align: center;
-       line-height: 30px;
-       display:block;
-
-     a {
-
-       width: 216px;
-       height: 30px;
-       font-family: "Noto Sans";
-       padding-top: 10px;
-       font-size: 20px;
-       font-weight: bold;
-       text-align: center;
-       line-height: 30px;
-       color: #FFF;
-     }
-   }
-
-
-
-
-
-
-
-
-
-.text-shadow{
-   border-top: 3px solid #248e6a;
-   width: 100%;
-   padding-bottom: 10px;
-   margin-bottom: 20px;
-}
-.get_involved img {
-  float: left;
-  width: 227px;
-  height: 244px;
-}
-
-
-
-
+//     .get_involved img {
+//     float: left;
+//     width: 227px;
+//     height: 244px;
+// }
 // This is for green line
-.text-shadow {
-    border-top: 3px solid #248e6a;
-    width: 100%;
-    margin-bottom: 10px;
-
-
-    // @include border-radius (10px);
-    // border-right: 1px solid #248E6A;
-
-}
 // This is for support now container
-
-
-
 .support-containar {
-display: flex;
-justify-content: center;
-
-
-
+    display: flex;
+    justify-content: center;
 }
- .support-img{
-   width:150px 60px;
+.support-img {
+    width: 150px 60px;
     height: 160.50px;
     align-self: center;
-
-
 }
-    img{
-
+img {
     height: 100%;
 
-} @include desktop {
-
-
 }
+ @include desktop {
+ }
 // This for green circle btn
-
 .involved {
     .circle-btn {
         width: 200px;
         height: 178px;
         display: flex;
         height: 200px;
-       -webkit-border-radius: 150%;
+        -webkit-border-radius: 150%;
         -moz-border-radius: 150%;
         -ms-border-radius: 150%;
         -o-border-radius: 150%;
@@ -171,19 +118,16 @@ justify-content: center;
         font-size: 18px;
         text-align: center;
         line-height: 27px;
-  }
+    }
 }
-
-
 // This for volenteer btn
-
 .re-btn {
     width: 175.38px;
     height: 47px;
     border-radius: 6px;
-    background-color:#f76072;
+    background-color: #f76072;
     color: #fff;
-    margin-left:60px;
+    margin-left: 60px;
     padding: 10px;
     box-shadow: none;
     font-family: "Noto Sans";
@@ -196,16 +140,12 @@ justify-content: center;
     font-weight: bold;
     text-align: center;
     line-height: 27px;
-    &:hover {
-        background-color: red;
-    }
-
 }
 
 
 // This for donation
 .pink-btn {
-    width:175.38px;
+    width: 175.38px;
     height: 47px;
     background-color: #f76072;
     border-radius: 6px;
@@ -220,9 +160,8 @@ justify-content: center;
     text-shadow: none;
     letter-spacing: 0.8px;
     text-decoration: none;
+    float: left;
 }
-
-
 
 // This for you click on foleenter shaw the other btn
 .contact-container {
@@ -235,55 +174,50 @@ justify-content: center;
         width: 50px;
     }
 }
-
-
 // This is for red line beside the paragraf
-
-blockquote {
-    border-left: 10px solid #CB203E;
-    padding: 0 19px;
-}
-
+// blockquote {
+//     border-left: 10px solid #CB203E;
+//     padding: 0 19px;
+// }
+// .involved {
+//     .green-btn {
+//         padding: 20px 25px 19px 19px;
+//         font-size: 25px;
+//         height: 200px;
+//         display: flex;
+//         -webkit-border-radius: 150%;
+//         -moz-border-radius: 150%;
+//         -ms-border-radius: 150%;
+//         -o-border-radius: 150%;
+//         border-radius: 150%;
+//         background-color: #4fc8a1;
+//         display: block;
+//         width: 200px;
+//         text-align: center;
+//         color: #fff;
+//         text-align: center;
+//     }
+// }
 .involved {
-  .green-btn{
-
-      padding-left:19px;
-      padding-right:25px;
-      padding-top: 20px;
-      padding-bottom: 19px;
-      font-size: 25px;
-      height: 200px;
-      display: flex;
-      -webkit-border-radius: 150%;
-      -moz-border-radius: 150%;
-      -ms-border-radius: 150%;
-      -o-border-radius: 150%;
-      border-radius: 150%;
-      background-color: #4fc8a1;
-      display:block;
-      width:200px;
-      text-align: center;
-      color:#fff;
-      text-align: center
-      }
- }
-
- .involved {
-     .red-btn {
-         padding: 15px 40px;
-         background-color: #F76072;
-         border-radius: 6px;
-         color: #fff;
+    .red-btn {
+        padding: 15px 40px;
+        background-color: #F76072;
+        border-radius: 6px;
+        color: #fff;
         margin-left: 80px;
-         font-family: "Noto Sans";
-         font-size: 24px;
-         font-weight: 300;
-         text-shadow: none;
-         letter-spacing: 0.8px;
-         text-align: center;
-         display:inline;
-         line-height: inherit;
-         margin: 20px;
-         flex-direction:row;
-     }
-  }
+        font-family: "Noto Sans";
+        font-size: 24px;
+        font-weight: 300;
+        text-shadow: none;
+        letter-spacing: 0.8px;
+        text-align: center;
+        display: inline;
+        line-height: inherit;
+        margin: 20px;
+        flex-direction: row;
+    }
+}
+border-radius {
+    border-left: solid 12px $border_left_red;
+    border-color: red;
+}
