fixing what is montessory page that was broken after last merge conflict

--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -5,9 +5,9 @@ $basic_pading: 0.625rem; /// ==>10px ////
 $basic_margin: 0.625rem; /// ==>10px ////
 $basic_hline_height: 0.625rem; /// ==>10px ////
 ///Screen Size///
-$desktop_width:768px; //992px
-$desktop_large_width:992px; //
-$mobile_width:37.5rem; //480px for Mobile Container
+$desktop_width: 959px; //992px
+$tablet_width: 768px; //
+
 //Layout//
 $mobile_line_height:1.5rem;
 $base_spacing_normal: 1rem;
