--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -429,8 +429,12 @@
         padding-left: 30px;
         line-height: inherit;
         font-size: 1.4rem;
-    }
+        a{
+          color: $color_btn_hover_green;
+        }
+    }}
 .fa-caret-right{
+  cursor: pointer;
   color: $color_btn_hover_green;
   padding-right: 5px;
 }
@@ -449,9 +453,9 @@ width: 450px;
         padding-left: 30px;
         line-height: inherit;
 
-    a{
+    a{color: $color_btn_hover_green;
       font-size: 1.2rem;@include desktop{font-size: 1.4rem;}
-      color: $color_btn_hover_green;
+
       }
     }
 }
@@ -480,12 +484,14 @@ width: 450px;
 .fa-angle-down {
     color: green;
     padding-left: 10px;
+    cursor: pointer;
 }
 /*Start Resources Section  */
 .main-resources {
     border-bottom: none;
     height: 400px;
     position: relative;
+  }
     .green-bt{
         background-color: #4fc8a1;
         @include border-radius (6px);
@@ -493,17 +499,19 @@ width: 450px;
         display: block;
         margin: 10px auto;;
         text-shadow: none;
+        width: 300px;
+        height: 60px;
         a{
           font-family: Noto Sans;
-          font-size:1rem;
+          font-size:0.8rem;
           font-weight: 700;
           text-align: center;
           line-height: 28px;
           color: #fff;
-          padding: 10px 20px;
+          padding: 10px 25px;
         }
         @include desktop {
-            width: 331px;
+            width: 400px;
             height: 65px;
             font-size: 20px;
             a{
@@ -511,4 +519,3 @@ font-size:1.1rem;
             }
         }
     }
-} }
